[project]
name = "kiket-sdk"
version = "0.1.0"
description = "Python SDK for building Kiket extensions"
authors = [{name = "Kiket", email = "platform@kiket.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["kiket", "extensions", "webhooks", "automation"]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://docs.kiket.dev/extensions/python-sdk/quickstart"
Documentation = "https://docs.kiket.dev/extensions/python-sdk/quickstart"
Source = "https://github.com/kiket-dev/kiket"
Issues = "https://github.com/kiket-dev/kiket/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kiket_sdk", "kiket_sdk.testing"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
